--- a/jwt/app/templates/application.hbs
+++ b/jwt/app/templates/application.hbs
@@ -4,5 +4,13 @@
   {{#link-to 'login'}}Login{{/link-to}}
 {{/if}}
 <br>
+<button {{action 'doMyTest'}}>do test</button>
+<br>
 
 {{outlet}}
+
+<div class="c-notification__container">
+  {{#each notifications as |notification|}}
+  {{notification-message notification=notification}}
+  {{/each}}
+</div>
